--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,6 @@
 <p>What's your question?</p>
 
-<form action="ask" method="get">
+<form action="answer" method="get">
   <input type="text" name="question" value="<%= params[:question] %>">
   <input type="submit" value="Ask!">
 </form>
